Better directions and a CSS change
A gave the center column a fixed with, but added a media query so it
will shrink if the screen gets too narrow (like on a phone).

--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@ body {
   flex-direction: column
 }
 
+
 #center-col {
   width: 840px;
   flex-grow: 1;
@@ -23,6 +24,11 @@ body {
   margin: auto;
   background-color: #eeeef3;
   box-shadow: 0 0 20px 5px #0004;
+}
+@media (max-width: 840px) {
+  #center-col {
+    width: 100%;
+  }
 }
 
 main > *:last-child {
